raps-kernel/src/snapshots/raps_kernel__prometheus_metrics__tests__render_full_metrics.snap
---
source: raps-kernel/src/prometheus_metrics.rs
assertion_line: 278
expression: output
---
# HELP raps_api_errors_total Total API errors
# TYPE raps_api_errors_total counter
raps_api_errors_total{endpoint="/oss/v2/buckets"} 3
# HELP raps_api_requests_total Total API requests
# TYPE raps_api_requests_total counter
raps_api_requests_total{endpoint="/oss/v2/buckets"} 500
# HELP raps_cache_hits_total Total cache hits
# TYPE raps_cache_hits_total counter
raps_cache_hits_total{endpoint="/oss/v2/buckets"} 120
# HELP raps_job_duration_seconds Job processing duration in seconds
# TYPE raps_job_duration_seconds histogram
raps_job_duration_seconds_bucket{job_type="translate",le="1"} 0
raps_job_duration_seconds_bucket{job_type="translate",le="5"} 0
raps_job_duration_seconds_bucket{job_type="translate",le="15"} 0
raps_job_duration_seconds_bucket{job_type="translate",le="30"} 0
raps_job_duration_seconds_bucket{job_type="translate",le="60"} 1
raps_job_duration_seconds_bucket{job_type="translate",le="120"} 1
raps_job_duration_seconds_bucket{job_type="translate",le="300"} 1
raps_job_duration_seconds_bucket{job_type="translate",le="600"} 1
raps_job_duration_seconds_bucket{job_type="translate",le="1800"} 1
raps_job_duration_seconds_bucket{job_type="translate",le="+Inf"} 1
raps_job_duration_seconds_sum{job_type="translate"} 45
raps_job_duration_seconds_count{job_type="translate"} 1
# HELP raps_jobs_processed_total Total jobs processed
# TYPE raps_jobs_processed_total counter
raps_jobs_processed_total{priority="critical",status="success"} 100
raps_jobs_processed_total{priority="normal",status="failure"} 2
# HELP raps_queue_depth Number of jobs waiting in queue
# TYPE raps_queue_depth gauge
raps_queue_depth{priority="background"} 42
raps_queue_depth{priority="critical"} 3
raps_queue_depth{priority="normal"} 15
# HELP raps_worker_info Worker metadata
# TYPE raps_worker_info gauge
raps_worker_info{version="5.0.0",worker_id="worker-1"} 1
